# Content-Based-Image-Retrieval

./: CMakeLists.txt  README.md  duck.txt  duck_h.txt
